# stm32f401-embassy

./: Cargo.toml
.cargo/: config.toml
src/: cli.rs  display_task.rs  i2c_task.rs  line_input.rs  main.rs  noline_task.rs  usb_task.rs
