[package]
name = "stm32f401-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["defmt", "time-driver-any", "stm32f401cc", "memory-x", "unstable-pac", "exti"] }
embassy-executor = { version = "0.6.1", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.3.0", path = "../../embassy/embassy-usb", features = ["defmt" ] }
# embassy-usb-synopsys-otg = { version = "0.1.0", path = "../../embassy/embassy-usb-synopsys-otg", features = ["defmt" ] }
embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }

embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"

log = "0.4.22"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
panic-rtt-target = "0.1.3"
display-interface-spi = "0.5.0"
critical-section = "1.2.0"
portable-atomic = "1.9.0"
ili9341 = "0.6.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
display-interface = "0.5.0"
profont = "0.7.0"
static_cell = "2.1.0"

[profile.release]
debug = 2

[[bin]]
name = "stm32f401-embassy"
harness = false

[[bin]]
name = "usb_serial"
harness = false

