[package]
name = "stm32f401-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["time-driver-tim3", "stm32f401cc", "memory-x", "unstable-pac", "exti", "defmt"] }
embassy-executor = { version = "0.6.1", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.3.0", path = "../../embassy/embassy-usb" } 
embassy-usb-synopsys-otg = { version = "0.1.0", path = "../../embassy/embassy-usb-synopsys-otg" }
embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }
embassy-sync = { version = "0.6.0", path = "../../embassy/embassy-sync" }

embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"

log = "0.4.22"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
panic-rtt-target = "0.1.3"
display-interface-spi = "0.5.0"
critical-section = "1.2.0"
portable-atomic = "1.9.0"
ili9341 = "0.6.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
display-interface = "0.5.0"
profont = "0.7.0"
static_cell = "2.1.0"
ds323x = "0.5.1"
chrono = { version = "0.4.38", default-features = false }
eg-seven-segment = "0.2.0"
heapless = "0.8.0"
embedded-io-async = "0.6.1"
nom = { version = "7.1.3", default-features = false }

[profile.release]
debug = 2

[[bin]]
name = "clock"
harness = false

[[bin]]
name = "async_display"
harness = false

[[bin]]
name = "interrupt_executor"
harness = false

